# PLCnext_CLI

src/NuGet/: NCalcCore.5.11.0-gb78c2e88e6.nupkg  NCalcSync.5.11.0-gb78c2e88e6.nupkg
src/PlcNext/: AssemblyInfo.cs  LicensePLCnCLI.html  PlcNext.csproj
src/PlcNext.Common/: BaseDiModule.cs  CodeErrors.Designer.cs  CodeErrors.resx  DiModule.cs  ExceptionTexts.Designer.cs  ExceptionTexts.resx  PlcNext.Common.csproj
src/PlcNext.Common/Commands/: BuildCommand.cs  BuildCommandArgs.cs  GetSdksCommand.cs  GetSdksCommandArgs.cs  GetTargetsCommand.cs  GetTargetsCommandArgs.cs  SyncCommand.cs
src/PlcNext.Common/DataModel/: ConstantContentProvider.cs
src/PlcNext.Common/Deploy/: AcfEngineeringLibraryBuilderDeployStep.cs  CopyDependenciesDeployStep.cs  DeployCommandContentProvider.cs  DeployEntity.cs  EmptyDeployEngine.cs  EngineeringLibraryBuilderDeployStep.cs  SharedNativeDeployEngine.cs  SharedNativeLibraryBuilderDeployStep.cs  ToolExecutionDeployStep.cs
src/PlcNext.Common/Generate/: SharedNativeGenerateEngine.cs
src/PlcNext.Common/Installation/SDK/: SdkInstaller.cs
src/PlcNext.Common/MetaData/: metaconfig.cs  metaconfig.xsd
src/PlcNext.Common/Project/: DeployArgumentsException.cs  ITargetParser.cs  ProjectConfigurationProvider.cs  ProjectConfigurationSchema.cs  ProjectConfigurationSchema.xsd  ProjectConfigurations.cs  ProjectPropertiesProvider.cs  ProjectSettingsSchema.cs  Update.bat
src/PlcNext.Common/Templates/: TemplateCommandProvider.cs  TemplateDescriptionSchema.cs  TemplateDescriptionSchema.xsd
src/PlcNext.Common/Tools/: Constants.cs  EntityKeys.cs
src/PlcNext.Common/Tools/FileSystem/: FileInfoContentResolver.cs  FileSystemInfoContentResolver.cs  IEntryContentResolver.cs  IFileContentResolver.cs  VirtualDirectory.cs  VirtualEntry.cs  VirtualFile.cs
src/PlcNext.Common/Tools/IO/: Block.cs  BuddyAllocator.cs  ConcurrentPage.cs  ConcurrentPageBuffer.cs  ConcurrentStream.cs  IPage.cs  IPageBuffer.cs  MemoryStreamEvents.cs  Page.cs  PageBuffer.cs  PageBufferOptions.cs  PageBufferType.cs  PageStream.cs  PageStreamFactory.cs  RecyclableMemoryStream.cs  RecyclableMemoryStreamManager.cs  StreamFactory.cs
src/PlcNext.Common/Tools/MSBuild/: MSBuildProjectInformationProvider.cs
src/PlcNext.Common/Tools/Process/: IProcess.cs  ProcessManager.cs
src/PlcNext.Common/Tools/SDK/: CMakeConversation.cs  ISdkRepository.cs  SdkInformation.cs
src/PlcNext.CppParser/: PlcNext.CppParser.csproj
src/PlcNext/CommandLine/: GetTargetsVerb.cs  GetVerb.cs
src/Test.PlcNext/: Test.PlcNext.csproj
src/Test.PlcNext/Deployment/: CustomToolFileNames.xml
src/Test.PlcNext/Deployment/AcfProjectv210/: CMakeLists.txt
src/Test.PlcNext/Deployment/AcfProjectv216/: CMakeLists.txt
src/Test.PlcNext/Deployment/NoEntities/: CMakeLists.txt
src/Test.PlcNext/UnitTests/: AttributeExtensionsTests.cs  CommandResultsTests.cs  ConversionFrom190Tests.cs  InvalidUriFormatExceptionTests.cs  MigrationChainTests.cs  ToolsFileSystemTests.cs  ToolsIoTests.cs  TotalAccessTypeTests.cs
(+84 files in other folders)
